--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,23 +1,27 @@
 typescript:
-  - any:
-      - '**/*.ts'
-      - '**/*.tsx'
+- changed-files:
+  - any-glob-to-any-file:
+    - '**/*.ts'
+    - '**/*.tsx'
 
 testing:
-  - any:
-      - 'tests/**/*'
-      - '**/*.test.ts'
-      - '**/*.test.tsx'
-      - '**/*.spec.ts'
-      - '**/*.spec.tsx'
+- changed-files:
+  - any-glob-to-any-file:
+    - 'tests/**/*'
+    - '**/*.test.ts'
+    - '**/*.test.tsx'
+    - '**/*.spec.ts'
+    - '**/*.spec.tsx'
 
 github-actions:
-  - any:
-      - '.github/workflows/**/*'
-      - '.github/actions/**/*'
+- changed-files:
+  - any-glob-to-any-file:
+    - '.github/workflows/**/*'
+    - '.github/actions/**/*'
 
 documentation:
-  - any:
-      - '**/*.md'
-      - 'docs/**/*'
-      - 'LICENSE'
+- changed-files:
+  - any-glob-to-any-file:
+    - '**/*.md'
+    - 'docs/**/*'
+    - 'LICENSE'
