--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: 获取 Dependabot 元数据
         id: metadata
-        uses: dependabot/fetch-metadata@db30037c5b126710396623db11c67e95933ea6cc # v2.3.0
+        uses: dependabot/fetch-metadata@v2.3.0
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
 
