--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -17,9 +17,14 @@ on:
         required: false
         default: false
         type: boolean
+      clear_caches:
+        description: "清除旧的 npm 和 Plasmo 缓存后再构建"
+        required: false
+        default: false
+        type: boolean
 
 permissions:
-  actions: read
+  actions: write
   contents: write
   pull-requests: write
   security-events: write
@@ -45,6 +50,59 @@ jobs:
         uses: actions/setup-node@6044e13b5dc448c55e2357c09f80417699197238  # v6.2.0
         with:
           node-version: ${{ env.NODE_VERSION }}
+
+      - name: 清除旧的 npm 和 Plasmo 缓存（如启用）
+        if: ${{ github.event.inputs.clear_caches == 'true' }}
+        uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd  # v8.0.0
+        with:
+          script: |
+            const owner = context.repo.owner;
+            const repo = context.repo.repo;
+            const prefixes = ['${{ runner.os }}-node-', '${{ runner.os }}-plasmo-'];
+            let cachesCleared = 0;
+            
+            console.log('正在清除相关缓存...');
+            
+            for (const prefix of prefixes) {
+              let page = 1;
+              const perPage = 100;
+              
+              while (true) {
+                const { data: { actions_caches: caches } } = await github.rest.actions.getActionsCacheList({
+                  owner,
+                  repo,
+                  per_page: perPage,
+                  page: page
+                });
+                
+                if (!caches || caches.length === 0) {
+                  break;
+                }
+                
+                for (const cache of caches) {
+                  if (cache.key.startsWith(prefix)) {
+                    console.log(`删除缓存: ${cache.key} (ID: ${cache.id})`);
+                    try {
+                      await github.rest.actions.deleteActionsCacheById({
+                        owner,
+                        repo,
+                        cache_id: cache.id
+                      });
+                      cachesCleared++;
+                    } catch (error) {
+                      console.error(`删除缓存 ${cache.key} 失败:`, error.message);
+                    }
+                  }
+                }
+                
+                if (caches.length < perPage) {
+                  break;
+                }
+                page++;
+              }
+            }
+            
+            console.log(`\n✅ 成功清除了 ${cachesCleared} 个相关缓存`);
 
       - name: 缓存 node_modules 和 npm 缓存
         uses: actions/cache@cdf6c1fa76f9f475f3d7449005a359c84ca0f306  # v5.0.3
