--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -41,9 +41,10 @@ jobs:
           echo "## 🔒 安全审计报告" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
-          AUDIT_OUTPUT=$(npm audit --audit-level=moderate 2>&1 || true)
+          AUDIT_OUTPUT=$(npm audit --audit-level=moderate 2>&1)
+          AUDIT_EXIT_CODE=$?
 
-          if echo "$AUDIT_OUTPUT" | grep -q "found 0 vulnerabilities"; then
+          if [ $AUDIT_EXIT_CODE -eq 0 ]; then
             echo "✅ 未发现已知漏洞" >> $GITHUB_STEP_SUMMARY
             echo "audit_status=clean" >> $GITHUB_OUTPUT
           else
@@ -51,6 +52,8 @@ jobs:
             echo '```' >> $GITHUB_STEP_SUMMARY
             echo "$AUDIT_OUTPUT" | head -50 >> $GITHUB_STEP_SUMMARY
             echo '```' >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "::warning::发现安全漏洞，请查看审计报告并修复"
             echo "audit_status=warning" >> $GITHUB_OUTPUT
           fi
 
@@ -61,28 +64,24 @@ jobs:
           echo "## 📜 许可证合规检查" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
-          # 安装 license-checker-rseidelsohn 进行详细报告
           npm install -g license-checker-rseidelsohn
 
           echo "### 📊 许可证摘要" >> $GITHUB_STEP_SUMMARY
           license-checker-rseidelsohn --summary >> $GITHUB_STEP_SUMMARY
 
-          # 定义禁止的许可证（可能与隐私优先/专有目标冲突的 Copyleft 许可证）
           FORBIDDEN_LICENSES="GPL-2.0-only,GPL-2.0-or-later,GPL-3.0-only,GPL-3.0-or-later,AGPL-3.0-only,AGPL-3.0-or-later,LGPL-2.0-only,LGPL-2.0-or-later,LGPL-2.1-only,LGPL-2.1-or-later,LGPL-3.0-only,LGPL-3.0-or-later"
           
-          # 检查禁止的许可证
-          VIOLATIONS=$(license-checker-rseidelsohn --failOn "$FORBIDDEN_LICENSES" 2>&1 || true)
-          
-          if echo "$VIOLATIONS" | grep -q "package(s) using a forbidden license"; then
-            echo "❌ **检测到许可证违规！**" >> $GITHUB_STEP_SUMMARY
-            echo "以下包使用了受限许可证：" >> $GITHUB_STEP_SUMMARY
-            echo '```' >> $GITHUB_STEP_SUMMARY
-            echo "$VIOLATIONS" >> $GITHUB_STEP_SUMMARY
-            echo '```' >> $GITHUB_STEP_SUMMARY
-            echo "license_status=violation" >> $GITHUB_OUTPUT
-          else
+          if license-checker-rseidelsohn --failOn "$FORBIDDEN_LICENSES" 2>&1; then
             echo "✅ 所有依赖均符合许可证政策。" >> $GITHUB_STEP_SUMMARY
             echo "license_status=ok" >> $GITHUB_OUTPUT
+          else
+            echo "❌ **检测到许可证违规！**" >> $GITHUB_STEP_SUMMARY
+            echo "以下包使用了受限许可证（GPL/AGPL/LGPL），与隐私优先策略冲突：" >> $GITHUB_STEP_SUMMARY
+            license-checker-rseidelsohn --failOn "$FORBIDDEN_LICENSES" >> $GITHUB_STEP_SUMMARY 2>&1 || true
+            echo "license_status=violation" >> $GITHUB_OUTPUT
+            echo ""
+            echo "::error::检测到许可证违规，存在 GPL/AGPL/LGPL 依赖，请检查并移除"
+            exit 1
           fi
 
       - name: '依赖体积检查'
