--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -1,10 +1,10 @@
-name: '依赖审查'
+name: "依赖审查"
 on:
   pull_request:
     branches: ["main"]
     paths:
-      - 'package.json'
-      - 'package-lock.json'
+      - "package.json"
+      - "package-lock.json"
 
 permissions:
   contents: read
@@ -18,24 +18,24 @@ jobs:
   dependency-review:
     runs-on: ubuntu-latest
     steps:
-      - name: '检出代码库'
+      - name: "检出代码库"
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
 
-      - name: '设置 Node.js 环境'
+      - name: "设置 Node.js 环境"
         uses: actions/setup-node@6044e13b5dc448c55e2357c09f80417699197238 # v6.2.0
         with:
-          node-version: '20'
+          node-version: "20"
 
-      - name: '依赖审查'
+      - name: "依赖审查"
         uses: actions/dependency-review-action@3c4e3dcb1aa7874d2c16be7d79418e9b7efd6261 # v4.8.2
         with:
           comment-summary-in-pr: always
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: '安装依赖'
+      - name: "安装依赖"
         run: npm ci
 
-      - name: '安全审计'
+      - name: "安全审计"
         id: audit
         run: |
           echo "## 🔒 安全审计报告" >> $GITHUB_STEP_SUMMARY
@@ -57,7 +57,7 @@ jobs:
             echo "audit_status=warning" >> $GITHUB_OUTPUT
           fi
 
-      - name: '许可证检查'
+      - name: "许可证检查"
         id: license
         run: |
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -70,7 +70,7 @@ jobs:
           license-checker-rseidelsohn --summary >> $GITHUB_STEP_SUMMARY
 
           FORBIDDEN_LICENSES="GPL-2.0-only,GPL-2.0-or-later,GPL-3.0-only,GPL-3.0-or-later,AGPL-3.0-only,AGPL-3.0-or-later,LGPL-2.0-only,LGPL-2.0-or-later,LGPL-2.1-only,LGPL-2.1-or-later,LGPL-3.0-only,LGPL-3.0-or-later"
-          
+
           if license-checker-rseidelsohn --failOn "$FORBIDDEN_LICENSES" 2>&1; then
             echo "✅ 所有依赖均符合许可证政策。" >> $GITHUB_STEP_SUMMARY
             echo "license_status=ok" >> $GITHUB_OUTPUT
@@ -84,7 +84,7 @@ jobs:
             exit 1
           fi
 
-      - name: '依赖体积检查'
+      - name: "依赖体积检查"
         id: size
         run: |
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -100,7 +100,7 @@ jobs:
           echo "size=$NODE_MODULES_SIZE" >> $GITHUB_OUTPUT
           echo "count=$DEPENDENCY_COUNT" >> $GITHUB_OUTPUT
 
-      - name: '创建 PR 评论'
+      - name: "创建 PR 评论"
         if: github.event_name == 'pull_request'
         uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8.0.0
         with:
